--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -16,6 +16,10 @@
  *= require sidebyside
  *= require_directory .
  */
+
+@import "bootstrap-sprockets";
+@import "bootstrap";
+
 body {
    margin: 0;
    font-family: "Helvetica Neue", Helvetica, Arial, sans-serif;
