--- a/app/views/layouts/_messages.html.erb
+++ b/app/views/layouts/_messages.html.erb
@@ -1,6 +1,6 @@
 <% flash.each  do |name, msg| %>
    <% if msg.is_a?(String) %>
-      <div class="alert alert-dismissable alert-<%= name.to_s == 'notice' ? 'success' : 'danger' %>">
+      <div class="alert alert-dismissable <%= bootstrap_class_for(name) %>">
          <button type="button" class="close" data-dismiss="alert" aria-hidden="true">&times;</button>
          <%= msg %>
       </div>
