--- a/app/views/common/_new_batch_popup.html.erb
+++ b/app/views/common/_new_batch_popup.html.erb
@@ -20,6 +20,12 @@
             </div>
          </td>
       </tr>
+      <tr class="language-model-row">
+         <td class="table-label">Language Model:</td>
+         <td class="table-input">
+            <%= select_tag "new-language-model", options_for_select([['None', nil]]) + options_from_collection_for_select(LanguageModel.all, :id, :name, nil) %>
+         </td>
+      </tr>
       
       <tr><td class="table-label">Parameters:</td><td><input type="text" id="new-params"/></td></tr>
       <tr><td class="table-label" style="vertical-align: text-top;">Notes:</td><td><textarea id="new-notes"></textarea></td></tr>
