Add GlyphSubstitutionModel model Associate a GlyphSubstitutionModel to BatchJob Rename font_training_results path to font_path and add language_model_path and glyph_substitution_model_path attributes Rework job queue reserve API to put in font_training_results paths - in case of an Ocular transcription

--- a/app/views/common/_new_batch_popup.html.erb
+++ b/app/views/common/_new_batch_popup.html.erb
@@ -32,6 +32,12 @@
             <%= select_tag "new-language-model", options_for_select([['None', nil]]) + options_from_collection_for_select(LanguageModel.all, :id, :name, nil) %>
          </td>
       </tr>
+      <tr class="gsm-row">
+         <td class="table-label">GSM:</td>
+         <td class="table-input">
+            <%= select_tag "new-gsm", options_for_select([['None', nil]]) + options_from_collection_for_select(GlyphSubstitutionModel.all, :id, :name, nil) %>
+         </td>
+      </tr>
       
       <tr><td class="table-label">Parameters:</td><td><input type="text" id="new-params"/></td></tr>
       <tr><td class="table-label" style="vertical-align: text-top;">Notes:</td><td><textarea id="new-notes"></textarea></td></tr>
