Fixed "Add pages to batch job" button so that it uses same styling/methodology as other buttons Added a "Clone Pages from Previous Batch Job" button that creates a new batch job but clones pages from a previous one

--- a/app/views/dashboard/index.html.erb
+++ b/app/views/dashboard/index.html.erb
@@ -8,6 +8,7 @@
          <input type="button" id="select-all" value="Select All" />
          <input type="button" id="schedule-selected" value="Schedule Selected" />
          <input type="button" id="schedule-all" value="Schedule All" />
+         <input type="button" id="clone-batch-pages" value="Clone Pages from a Previous Batch" />
          <input type="button" id="font-all" value="Set Print Font for Selected Works" />
     <%#= form_for :export, url: dashboard_index_path(format: 'csv', q: params[:q]), html: { method: :get } do |f| %>
       <%#= f.hidden_field :params, value: params.to_json %>
