--- a/app/views/results/show.html.erb
+++ b/app/views/results/show.html.erb
@@ -43,9 +43,7 @@
    <input type="button" id="select-failed-pages" value="Select Failed" />
    <input type="button" id="schedule-pages" value="Schedule Selected" />
    <input type="button" id="set-work-font" value="Set Print Font for Work" />
-   <%= link_to('Schedule Selected to Existing BatchJob',
-         results_add_to_batchjob_path(work: @work), {class: 'btn btn-default', remote: true, 'data-toggle' => 'modal', 'data-target' => '#add-pages-to-batchjob'} )
-    %>
+   <input type="button" id="add-pages-to-batchjob-button" value="Schedule Selected to Existing Batchjob" />
    </div>
 
    <div id="toggle-col">
@@ -119,7 +117,10 @@
    <a  class="dashboard-back"  href="/"><< Back To Dashboard</a>
    <%= render :partial => 'txt_viewer_popup' %>
    <%= render :partial => 'error_popup' %>
+   <%= render :partial => 'add_to_batchjob', :locals => { path: results_add_to_batchjob_path } %>
 </div>
 
+<!--
 <div class="modal fade" id="add-pages-to-batchjob" tabindex="-1" role="dialog" aria-labelledby="add-pages-to-batchjob-label" aria-hidden="true">
 </div>
+-->
