--- a/app/views/common/_new_batch_popup.html.erb
+++ b/app/views/common/_new_batch_popup.html.erb
@@ -2,6 +2,10 @@
    <p id="new-batch-error">Batch name is required</p>
    <table>
       <tr><td class="table-label">Name:</td><td class="table-input"><input type="text" id="new-name"/></td></tr>
+      <tr id="new-batch-popup-clone-row" class="hidden">
+        <td class="table-label">Previous Batch (for cloning pages):</td>
+        <td class="table-input"><%= select_tag "prev-batch", options_for_select([['None', nil]]) + options_from_collection_for_select(BatchJob.all, :id, :name) %></td>
+      </tr>
       <tr>
          <td class="table-label">Batch Type:</td>
          <td class="table-input"><%= select_tag "new-type", options_from_collection_for_select(JobType.all, :id, :name) %></td>
